--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+    
   cupertino_icons: ^0.1.2
   titled_navigation_bar: ^4.1.0
+  http: ^0.12.1
+  flutter_wordpress: ^0.2.1
+  provider: ^4.1.0
+  #url_launcher: ^5.4.7
+  #wordpress_api: ^0.1.4
 
 dev_dependencies:
   flutter_test:
